# pwiki

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README-zh.md  README.md  RELEASE.md  SESSION.md  demo.tape  pyproject.toml
.github/workflows/: test.yml
docs/: 0.4-hosted-spec.md  ARCHITECTURE.md  COMPARISON.md  launch-tweet-zh.md  launch-tweet.md  llm-wiki-pattern.md
examples/: setup-demo.sh
examples/sample-en-wiki/: index.md
examples/sample-en-wiki/concepts/: BlastRadius.md  KnowledgeGraph.md
examples/sample-en-wiki/entities/: MCPServer.md
examples/sample-wiki/: 索引.md
examples/sample-wiki/实体/: MCP服务器.md
examples/sample-wiki/概念/: LadybugDB存储.md  知识图谱.md
pwiki/: __init__.py  aliases.py  brief.py  canvas.py  cli.py  evolution.py  index_embed.py  init.py  query.py  serve.py  sync.py
scripts/: release.sh
tests/: test_smoke.py
