[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwiki-cli"
version = "0.3.2"
description = "Karpathy's LLM Wiki, brew-install ready. Sync, query, and graph any repo's wiki into your Obsidian Vault."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zlc" }]
keywords = [
    "obsidian",
    "knowledge-base",
    "llm-wiki",
    "karpathy",
    "claude-code",
    "personal-knowledge-management",
    "second-brain",
    "json-canvas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]
rag = [
    "fastembed>=0.4",
    "numpy>=1.24",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
]
all = [
    "fastembed>=0.4",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
]

[project.urls]
Homepage = "https://github.com/zxs1633079383/pwiki"
Documentation = "https://github.com/zxs1633079383/pwiki#readme"
Issues = "https://github.com/zxs1633079383/pwiki/issues"
Source = "https://github.com/zxs1633079383/pwiki"

[project.scripts]
pwiki = "pwiki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pwiki"]
